# yopmail-client-rs

./: Cargo.toml  README.md  license  readme.md
examples/: cli.rs
src/: client.rs  constants.rs  error.rs  lib.rs  models.rs
