[package]
name = "yopmail-client-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking", "cookies", "gzip", "brotli", "deflate", "json"] }
scraper = "0.19"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[[example]]
name = "cli"
path = "examples/cli.rs"
