[package]
name = "yopmail-client"
version = "0.1.0"
edition = "2024"
description = "Unofficial blocking client for YOPmail: list inboxes, fetch (HTML/raw), send, attachments, RSS"
license = "MIT"
readme = "README.md"
homepage = "https://yopmail.com"
repository = "https://github.com/11philip22/yopmail-client-rs"
documentation = "https://docs.rs/yopmail-client"
keywords = ["yopmail", "email", "disposable", "temp", "rss"]
categories = ["email", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking", "cookies", "gzip", "brotli", "deflate", "json"] }
scraper = "0.19"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
rand = "0.8"

[[example]]
name = "cli"
path = "examples/cli.rs"
